--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include 'homework_3'
 include 'homework_2'
 include 'homework_5_classes_methods'
 include 'homework_4_arrays'
+include 'homework_7_class_enum_interface'
 
