--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,5 @@ include 'homework_5_classes_methods'
 include 'homework_4_arrays'
 include 'homework_7_class_enum_interface'
 include 'homework_6_override_clone'
+include 'homework_8_employee_recursion'
 
