--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,5 @@ include 'homework_9_exception'
 include 'homework_9_exception'
 include 'homework_9_exception'
 include 'homework_9_exception'
+include 'homework_10_strings'
 
