--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,5 @@ include 'homework_9_exception'
 include 'homework_9_exception'
 include 'homework_9_exception'
 include 'homework_10_strings'
+include 'homework_12_collections'
 
