--- a/settings.gradle
+++ b/settings.gradle
@@ -7,13 +7,15 @@ include 'homework_5_classes_methods'
 include 'homework_4_arrays'
 include 'homework_7_class_enum_interface'
 include 'homework_6_override_clone'
-include 'homework_8_employee_recursion
+include 'homework_8_employee_recursion'
 include 'homework_9_exception'
 include 'homework_9_exception'
 include 'homework_9_exception'
 include 'homework_9_exception'
 include 'homework_9_exception'
+include 'homework_8_employee_recursion'
 include 'homework_9_exception'
 include 'homework_10_strings'
 include 'homework_11_list'
+include 'homework_13_stream'
 
