--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,5 @@ include 'homework_10_strings'
 include 'homework_11_list'
 include 'homework_12_collections:untitled'
 findProject(':homework_12_collections:untitled')?.name = 'untitled'
+include 'homework_15_thread'
+
